--- a/Mood-Tracker/Base.lproj/Main.storyboard
+++ b/Mood-Tracker/Base.lproj/Main.storyboard
@@ -62,6 +62,7 @@
                                             <outlet property="imageViewMoodColor" destination="Jma-nv-yI1" id="wYk-hB-t2d"/>
                                             <outlet property="labelMoodDate" destination="95K-ib-zLe" id="aj0-jN-6xh"/>
                                             <outlet property="labelMoodTitle" destination="23W-3w-QKy" id="dm7-ZL-DAb"/>
+                                            <segue destination="Q2J-rQ-XmQ" kind="show" identifier="show entry details" id="vFH-x1-2n6"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -94,6 +95,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="957.97101449275374" y="20.758928571428569"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="jaF-4I-fCn">
+            <objects>
+                <viewController storyboardIdentifier="MoodDetailedViewController" id="Q2J-rQ-XmQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NZA-Jd-yHw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="2ed-cR-4M9"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bpl-cm-j50" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1678" y="21"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="oJU-Yr-CqN">
